--- a/index.html
+++ b/index.html
@@ -79,10 +79,54 @@
 хранить в заранее подготовленном массиве.
 Облегченный вариант: вместо отлова, когда скролл дойдет до
 конца страницы, используйте кнопку в конце списка новостей. -->
-    <section class="exercise_4">
-        <div class="box" id="newsContainer"></div>
-        <div id="loader" class="loader"></div>
+    <section class="exercise_4" >
+      <div class="wrap" id="newsContainer">
+        <h4>What is Lorem Ipsum?</h4>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. At molestiae voluptates eius reprehenderit id ratione necessitatibus, fugit sed quibusdam debitis quaerat voluptas nobis obcaecati voluptatem distinctio vel amet ipsa. Laudantium. Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe consectetur facilis exercitationem vero esse necessitatibus, vitae eaque omnis cum quae sed at voluptas earum minima quasi soluta architecto repudiandae corporis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quis ducimus fugit dignissimos illo atque temporibus quod ipsa totam eaque, enim similique obcaecati veniam ratione. Soluta amet optio laudantium id!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem distinctio officia optio at laborum fuga ex dolores. Maiores provident sapiente, blanditiis ducimus, autem quam cumque doloribus dicta illo nam hic.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint enim minus, perspiciatis laudantium quasi laboriosam sed ullam libero? Accusantium pariatur, sapiente repellendus itaque possimus ab cupiditate laboriosam ratione nemo ut?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, culpa ipsa explicabo sint, dignissimos quae maxime ratione ipsum fugit odit enim quisquam. Accusamus, ea commodi. Non ipsam consectetur consequatur odit.</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ullam doloribus exercitationem quos tempore eaque placeat eveniet earum quis vitae. Obcaecati voluptas quibusdam eum corporis, saepe inventore maxime sit minima rem.</p>
+        <div class="loading-icon" id="loader"></div>  
+      </div>
     </section>
+
+    <!-- Задание 5
+Создать html-страницу, на которой пользователь может ввести номер месяца, год, и получить календарь на указанный месяц.
+Календарь можно генерировать с помощью таблицы. Начальный
+день недели всегда должен быть понедельник. -->
+    <section class="exercise_5">
+
+    </section>
+
+    <!-- Задание 6
+Создать html-страницу со списком ссылок.
+Ссылки на внешние источники (которые начинаются с http://)
+необходимо подчеркнуть пунктиром.
+Искать такие ссылки в списке и устанавливать им дополнительные стили необходимо с помощью JS.   -->
+    <section class="exercise_6">
+      <div class="box">
+        <ul id="link-list">
+          <li><a href="index.html">index.html</a></li>
+          <li><a href="http://google.com">http://google.com</a></li>
+          <li><a href="https://itstep.org">https://itstep.org</a></li>
+          <li><a href="https://mystat.itstep.org">https://mystat.itstep.org</a></li>
+          <li><a href="/images/cat.jpg">/images/cat.jpg</a></li>
+          <li><a href="/local/path">/local/path</a></li>
+        </ul>
+      </div>
+    </section>
+    <!-- Задание 7
+Создать html-страницу со списком книг.
+При щелчке на элемент, цвет текста должен меняться на оранжевый. При повторном щелчке на другую книгу, предыдущей - необходимо возвращать прежний цвет.
+Если при клике мышкой была зажата клавиша Ctrl, то элемент
+добавляется/удаляется из выделенных. Если при клике мышкой
+была зажата клавиша Shift, то к выделению добавляются все
+элементы в промежутке от предыдущего кликнутого до текущего. -->
+      <section class="exercise_7">
+
+      </section>
 
     <script src="script.js"></script>
   </body>
